--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ org.gradle.configuration-cache=true
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
 parchment_minecraft_version=1.21
 parchment_mappings_version=2024.07.28
+veil_version=1.0.0.80
 # Environment Properties
 # You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
 # The Minecraft version must agree with the Neo version to get a valid artifact
